// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Node Labels
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Node Labels
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <div
        class="sc-jlyJG sc-gipzik cDyDsz"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-jlyJG sc-gipzik cDyDsz"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-jlyJG sc-gipzik cDyDsz"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Property Keys
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Property Keys
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <div
        class="sc-jlyJG sc-Rmtcm fXQBFE"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-jlyJG sc-Rmtcm fXQBFE"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Relationship Types
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-gisBJw hxBNvS"
  >
    <h5
      class="sc-caSCKo cyofIH"
    >
      Relationship Types
    </h5>
    <div
      class="sc-kjoXOD ioGxFX"
    >
      <div
        class="sc-jlyJG sc-csuQGl RrTcu"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-jlyJG sc-csuQGl RrTcu"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-jlyJG sc-csuQGl RrTcu"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
